[gd_scene load_steps=20 format=2]

[ext_resource path="res://art/theme.ogg" type="AudioStream" id=1]
[ext_resource path="res://art/gameover.wav" type="AudioStream" id=2]
[ext_resource path="res://art/yellow_brick_road.png" type="Texture" id=3]
[ext_resource path="res://Scenes/MobPath/MobPath.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Toxic_orb/Toxic_orb.tscn" type="PackedScene" id=5]
[ext_resource path="res://art/background-1.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Main/Main.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/HUD/HUD.tscn" type="PackedScene" id=9]
[ext_resource path="res://art/background-2.png" type="Texture" id=10]
[ext_resource path="res://art/background-3.png" type="Texture" id=11]
[ext_resource path="res://art/background-4.png" type="Texture" id=12]
[ext_resource path="res://art/background-7.png" type="Texture" id=13]
[ext_resource path="res://art/background-5.png" type="Texture" id=14]
[ext_resource path="res://art/background-6.png" type="Texture" id=15]

[sub_resource type="AnimatedTexture" id=5]
flags = 4
frames = 7
fps = 8.0
frame_0/texture = ExtResource( 6 )
frame_1/texture = ExtResource( 10 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 11 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 12 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 14 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 15 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 13 )
frame_6/delay_sec = 0.0

[sub_resource type="Curve2D" id=3]
resource_local_to_scene = true
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 34, 64, 0, 0, 0, 0, 1871, 53 )
}

[sub_resource type="Curve2D" id=4]
resource_local_to_scene = true
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 32, 1007, 0, 0, 0, 0, 1862, 1016 )
}

[sub_resource type="TileSet" id=2]
0/name = "yellow_brick_road.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 320, 64 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 64, 64 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="Main" type="Node"]
script = ExtResource( 7 )
toxic_orb = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.254902, 0.380392, 0.0705882, 1 )

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
margin_right = 1920.0
margin_bottom = 1080.0
texture = SubResource( 5 )

[node name="Player" parent="." instance=ExtResource( 8 )]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="OrbTimer" type="Timer" parent="."]
wait_time = 15.0

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="MobPath1" parent="." instance=ExtResource( 4 )]
curve = SubResource( 3 )

[node name="MobPath2" parent="." instance=ExtResource( 4 )]
curve = SubResource( 4 )
is_at_the_bottom = true

[node name="HUD" parent="." instance=ExtResource( 9 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
stream_paused = true

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( 15, 0, 2, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 4, 65550, 0, 2, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 4, 131085, 0, 2, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 4, 196620, 0, 2, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 4, 262155, 0, 2, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 393227, 0, 3, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 458764, 0, 3, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 1, 524301, 0, 3, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 1, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 1, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 4, 786445, 0, 2, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 4, 851980, 0, 2, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 4, 917515, 0, 2, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 4, 983050, 0, 2, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 4, 1048585, 0, 2, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 4, 1114121, 1, 65542, 1114122, 1, 65542, 1114123, 1, 65542, 1114124, 1, 65542, 1114125, 1, 65542, 1179656, 1, 65542, 1179657, 1, 65542, 1179658, 1, 65542, 1179659, 1, 65542, 1179660, 1, 65542, 1179661, 1, 65542, 1245192, 1, 65542, 1245193, 1, 65542, 1245194, 1, 65542, 1245195, 1, 65542, 1245196, 1, 65542, 1245197, 1, 65542, 1310728, 1, 65542, 1310729, 1, 65542, 1310730, 1, 65542, 1310731, 1, 65542, 1310732, 1, 65542, 1376265, 1, 65542, 1376266, 1, 65542, 1376267, 1, 65542, 1441802, 1, 65542 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 3
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 971, 2, 711, 264, 711, 442, 900, 578, 895, 768, 573, 1033, 576, 1085, 1079, 1085, 1408, 759, 1406, 580, 1218, 427, 1218, 257, 1274, 254, 1475, 56, 1475, 1 )

[connection signal="heal" from="Player" to="." method="_on_Player_heal"]
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="OrbTimer" to="." method="_on_OrbTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
